--- a/xpi/locale/dsb/options.dtd
+++ b/xpi/locale/dsb/options.dtd
@@ -154,7 +154,7 @@
 <!ENTITY Ctr_oldtoplevimg	"Klasiski wenkowny naglěd na běłej slězynje">
 <!ENTITY Ctr_altdlprogbar	"Póstupowa rědka ześěgnjenja: alternatiwny naglěd">
 <!ENTITY Ctr_altalertbox	"'Warnowański kašćik': Alternatiwny wenkowny naglěd">
-<!ENTITY Ctr_emptygfavico	"Powšykny fawority symbol wuměniś">
+<!ENTITY Ctr_emptygfavico	"Powšykny fawority symbol wuměniś (incl. library icons)">
 <!ENTITY Ctr_mstatusbar		"Pśesuwajobny wobcerk statusoweje rědki">
 <!ENTITY Ctr_mstatusbars4e	"Wobcerk statusoweje rědki kontrolěrujo se pśez 'Status-4-Evar'">
 <!ENTITY Ctr_mstatusbartpp	"Wobcerk statusoweje rědki kontrolěrujo se pśez 'ThePuzzlePiece'">
