--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -154,7 +154,7 @@
 <!ENTITY Ctr_oldtoplevimg	"Εικόνες τομέα «ανώτατου επιπέδου»: κλασική εμφάνιση">
 <!ENTITY Ctr_altdlprogbar	"Γραμμή προόδου λήψεων: εναλλακτική εμφάνιση">
 <!ENTITY Ctr_altalertbox	"«Πλαίσιο ειδοποίησης»: εναλλακτική εμφάνιση">
-<!ENTITY Ctr_emptygfavico	"Αντικατάσταση εικονιδίου γενικής χρήσης">
+<!ENTITY Ctr_emptygfavico	"Αντικατάσταση εικονιδίου γενικής χρήσης (incl. library icons)">
 <!ENTITY Ctr_mstatusbar		"Μετακινήσιμο πινακίδιο γραμμής κατάστασης">
 <!ENTITY Ctr_mstatusbars4e	"Το πινακίδιο γραμμής κατάστασης ελέγχεται από την επέκταση «Status-4-Evar»">
 <!ENTITY Ctr_mstatusbartpp	"Το πινακίδιο γραμμής κατάστασης ελέγχεται από την επέκταση «ThePuzzlePiece»">
