--- a/xpi/locale/nl/options.dtd
+++ b/xpi/locale/nl/options.dtd
@@ -154,7 +154,7 @@
 <!ENTITY Ctr_oldtoplevimg	"Klassieke afbeeldingsweergave op witte achtergrond">
 <!ENTITY Ctr_altdlprogbar	"Downloadvoortgangsbalk: alternatieve vormgeving">
 <!ENTITY Ctr_altalertbox	"‘Waarschuwingsvenster’: alternatieve vormgeving">
-<!ENTITY Ctr_emptygfavico	"Algemeen favicon vervangen">
+<!ENTITY Ctr_emptygfavico	"Algemeen favicon vervangen (incl. library icons)">
 <!ENTITY Ctr_mstatusbar		"Verplaatsbaar statuspaneel">
 <!ENTITY Ctr_mstatusbars4e	"Statusbalkpaneel wordt beheerd door ‘Status-4-Evar’">
 <!ENTITY Ctr_mstatusbartpp	"Statusbalkpaneel wordt beheerd door ‘ThePuzzlePiece’">
