--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -154,7 +154,7 @@
 <!ENTITY Ctr_oldtoplevimg	"Aparência de imagem clássica em fundo branco">
 <!ENTITY Ctr_altdlprogbar	"Barra de progresso de download: aparência alternativa">
 <!ENTITY Ctr_altalertbox	"'Caixa de alerta': aparência alternativa">
-<!ENTITY Ctr_emptygfavico	"Substituir favicon genérico">
+<!ENTITY Ctr_emptygfavico	"Substituir favicon genérico (incl. library icons)">
 <!ENTITY Ctr_mstatusbar		"Painel da barra de status móvel">
 <!ENTITY Ctr_mstatusbars4e	"O painel da barra de status é controlado pelo 'Status-4-Evar'">
 <!ENTITY Ctr_mstatusbartpp	"O painel da barra de status é controlado pelo 'ThePuzzlePiece'">
