--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -154,7 +154,7 @@
 <!ENTITY Ctr_oldtoplevimg	"Standard billed-udseende på hvid baggrund">
 <!ENTITY Ctr_altdlprogbar	"Download progress bar: alternative appearance">
 <!ENTITY Ctr_altalertbox	"'Alert-boks': alternativt udseende">
-<!ENTITY Ctr_emptygfavico	"Erstat generisk favicon">
+<!ENTITY Ctr_emptygfavico	"Erstat generisk favicon (incl. library icons)">
 <!ENTITY Ctr_mstatusbar		"Flytbare statuspanel">
 <!ENTITY Ctr_mstatusbars4e	"Statuslinje-panel styres af 'Status-4-Evar'">
 <!ENTITY Ctr_mstatusbartpp	"Statuslinje-panel styres af 'ThePuzzlePiece'">
