--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -154,7 +154,7 @@
 <!ENTITY Ctr_oldtoplevimg	"Klassische 'Bilddarstellung' auf weißem Hintergrund">
 <!ENTITY Ctr_altdlprogbar	"Downloadprogressleiste: alternative Darstellung">
 <!ENTITY Ctr_altalertbox	"Benachrichtigungs-Box: alternative Darstellung">
-<!ENTITY Ctr_emptygfavico	"Allgemeines Lesezeichensymbol ersetzen">
+<!ENTITY Ctr_emptygfavico	"Allgemeines Lesezeichensymbol ersetzen (inkl. Bibliothekssymbolen)">
 <!ENTITY Ctr_mstatusbar		"Statusbereich: sichtbar und verschiebbar">
 <!ENTITY Ctr_mstatusbars4e	"Statusbereich wird von 'Status-4-Evar' kontrolliert">
 <!ENTITY Ctr_mstatusbartpp	"Statusbereich wird von 'ThePuzzlePiece' kontrolliert">
