--- a/xpi/locale/ja/options.dtd
+++ b/xpi/locale/ja/options.dtd
@@ -154,7 +154,7 @@
 <!ENTITY Ctr_oldtoplevimg	"画像表示時の背景色を白に変更する">
 <!ENTITY Ctr_altdlprogbar	"ダウンロードのプログレスバーのデザインを変更する">
 <!ENTITY Ctr_altalertbox	"ダイアログ: デザインを変更する">
-<!ENTITY Ctr_emptygfavico	"空ファビコンを変更する">
+<!ENTITY Ctr_emptygfavico	"空ファビコンを変更する (incl. library icons)">
 <!ENTITY Ctr_mstatusbar		"ステータスバーパネルを移動可能にする">
 <!ENTITY Ctr_mstatusbars4e	"ステータスバーパネルは Status-4-Evar で制御されます。">
 <!ENTITY Ctr_mstatusbartpp	"ステータスバーパネルは ThePuzzlePiece で制御されます。">
