--- a/xpi/locale/ru/options.dtd
+++ b/xpi/locale/ru/options.dtd
@@ -154,7 +154,7 @@
 <!ENTITY Ctr_oldtoplevimg	"Изображение «домена верхнего уровня»: классический вид">
 <!ENTITY Ctr_altdlprogbar	"Индикатор загрузки: альтернативный вид">
 <!ENTITY Ctr_altalertbox	"«Окно предупреждений»: альтернативный вид">
-<!ENTITY Ctr_emptygfavico	"Заменять пустые фавиконки">
+<!ENTITY Ctr_emptygfavico	"Заменять пустые фавиконки (incl. library icons)">
 <!ENTITY Ctr_mstatusbar		"Подвижная строка состояния">
 <!ENTITY Ctr_mstatusbars4e	"Панель статуса контролируется 'Status-4-Evar'">
 <!ENTITY Ctr_mstatusbartpp	"Панель статуса контролируется 'ThePuzzlePiece'">
