--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -154,7 +154,7 @@
 <!ENTITY Ctr_oldtoplevimg	"Slike 'vrhnje domene': klasični videz">
 <!ENTITY Ctr_altdlprogbar	"Nadomestni videz vrstice napredka prenosov">
 <!ENTITY Ctr_altalertbox	"'Okno opozorila': nadomestni videz">
-<!ENTITY Ctr_emptygfavico	"Nadomesti splošno zaznamko">
+<!ENTITY Ctr_emptygfavico	"Nadomesti splošno zaznamko (incl. library icons)">
 <!ENTITY Ctr_mstatusbar		"Premakljivo podokno stanja">
 <!ENTITY Ctr_mstatusbars4e	"Podokno stanja nadzira 'Status-4-Evar'">
 <!ENTITY Ctr_mstatusbartpp	"Podokno stanja nadzira 'ThePuzzlePiece'">
