--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -155,6 +155,7 @@
 <!ENTITY Ctr_altdlprogbar	"Download progress bar: alternative appearance">
 <!ENTITY Ctr_altalertbox	"Okno s upozorněním: alternativní vzhled">
 <!ENTITY Ctr_emptygfavico	"Nahradit původní faviconu (incl. library icons)">
+<!ENTITY Ctr_emptygfavicon	"'Nahradit původní faviconu' does not work on &brandShortName; 55+">
 <!ENTITY Ctr_mstatusbar		"Přesunutelný stavový řádek">
 <!ENTITY Ctr_mstatusbars4e	"Stavový řádek je nastaven pomocí rozšíření 'Status-4-Evar'">
 <!ENTITY Ctr_mstatusbartpp	"Stavový řádek je nastaven pomocí rozšíření 'ThePuzzlePiece'">
