--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -155,6 +155,7 @@
 <!ENTITY Ctr_altdlprogbar	"Download progress bar: alternative appearance">
 <!ENTITY Ctr_altalertbox	"'Alert-boks': alternativt udseende">
 <!ENTITY Ctr_emptygfavico	"Erstat generisk favicon (incl. library icons)">
+<!ENTITY Ctr_emptygfavicon	"'Erstat generisk favicon' does not work on &brandShortName; 55+">
 <!ENTITY Ctr_mstatusbar		"Flytbare statuspanel">
 <!ENTITY Ctr_mstatusbars4e	"Statuslinje-panel styres af 'Status-4-Evar'">
 <!ENTITY Ctr_mstatusbartpp	"Statuslinje-panel styres af 'ThePuzzlePiece'">
