--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -155,6 +155,7 @@
 <!ENTITY Ctr_altdlprogbar	"Apariencia alternativa para la barra de progreso de descargas">
 <!ENTITY Ctr_altalertbox	"'Recuadro de alerta': Apariencia alternativa">
 <!ENTITY Ctr_emptygfavico	"Reemplazar favicon genérico (incl. library icons)">
+<!ENTITY Ctr_emptygfavicon	"'Reemplazar favicon genérico' does not work on &brandShortName; 55+">
 <!ENTITY Ctr_mstatusbar		"Mostrar panel móvil del contenedor de la antigua barra de estado">
 <!ENTITY Ctr_mstatusbars4e	"El panel de barra de estado está controlado por 'Status-4-Evar'">
 <!ENTITY Ctr_mstatusbartpp	"El panel de barra de estado está controlado por 'ThePuzzlePiece'">
