--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -155,6 +155,7 @@
 <!ENTITY Ctr_altdlprogbar	"Allalaadimise edenemise riba: alternatiivne välimus">
 <!ENTITY Ctr_altalertbox	"'Teavituskast': alternatiivne välimus">
 <!ENTITY Ctr_emptygfavico	"Asenda üldine lehe ikoon (incl. library icons)">
+<!ENTITY Ctr_emptygfavicon	"'Asenda üldine lehe ikoon' does not work on &brandShortName; 55+">
 <!ENTITY Ctr_mstatusbar		"Liigutatav olekupaneel">
 <!ENTITY Ctr_mstatusbars4e	"Olekuriba paneeli kontrollib 'Status-4-Evar'">
 <!ENTITY Ctr_mstatusbartpp	"Olekuriba paneeli kontrollib 'ThePuzzlePiece'">
