--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -155,6 +155,7 @@
 <!ENTITY Ctr_altdlprogbar	"Barre de progression de téléchargement : apparence alternative">
 <!ENTITY Ctr_altalertbox	"Boites de notification : apparence alternative">
 <!ENTITY Ctr_emptygfavico	"Remplacer le Favicon générique (incl. library icons) :">
+<!ENTITY Ctr_emptygfavicon	"'Remplacer le Favicon générique' does not work on &brandShortName; 55+">
 <!ENTITY Ctr_mstatusbar		"Rendre mobile le panneau de la barre d'état">
 <!ENTITY Ctr_mstatusbars4e	"Le panneau de la barre d'état est contrôlé par « Status-4-Evar ».">
 <!ENTITY Ctr_mstatusbartpp	"Le panneau de la barre d'état est contrôlé par « The Puzzle Piece ».">
