--- a/xpi/locale/hsb/options.dtd
+++ b/xpi/locale/hsb/options.dtd
@@ -155,6 +155,7 @@
 <!ENTITY Ctr_altdlprogbar	"Postupowa lajsta sćehnjenja: alternatiwny napohlad">
 <!ENTITY Ctr_altalertbox	"'Warnowanski kašćik': Alternatiwny zwonkowny napohlad">
 <!ENTITY Ctr_emptygfavico	"Powšitkowny faworitowy symbol wuměnić (incl. library icons)">
+<!ENTITY Ctr_emptygfavicon	"'Powšitkowny faworitowy symbol wuměnić' does not work on &brandShortName; 55+">
 <!ENTITY Ctr_mstatusbar		"Přesuwajomny wobłuk statusoweje lajsty">
 <!ENTITY Ctr_mstatusbars4e	"Statusowy wobłuk so přez 'Status-4-Evar' kontroluje">
 <!ENTITY Ctr_mstatusbartpp	"Statusowy wobłuk so přez 'ThePuzzlePiece' kontroluje">
