--- a/xpi/locale/it/options.dtd
+++ b/xpi/locale/it/options.dtd
@@ -155,6 +155,7 @@
 <!ENTITY Ctr_altdlprogbar	"Aspetto alternativo della barra di avanzamento del download">
 <!ENTITY Ctr_altalertbox	"Avvisi di notifiche: aspetto alternativo">
 <!ENTITY Ctr_emptygfavico	"Sostituisci la favicon generica (incl. library icons)">
+<!ENTITY Ctr_emptygfavicon	"'Sostituisci la favicon generica' does not work on &brandShortName; 55+">
 <!ENTITY Ctr_mstatusbar		"Barra di stato mobile">
 <!ENTITY Ctr_mstatusbars4e	"La barra di stato è gestita da 'Status-4-Evar'">
 <!ENTITY Ctr_mstatusbartpp	"La barra di stato è gestita da 'ThePuzzlePiece'">
