--- a/xpi/locale/ja/options.dtd
+++ b/xpi/locale/ja/options.dtd
@@ -155,6 +155,7 @@
 <!ENTITY Ctr_altdlprogbar	"ダウンロードのプログレスバーのデザインを変更する">
 <!ENTITY Ctr_altalertbox	"ダイアログ: デザインを変更する">
 <!ENTITY Ctr_emptygfavico	"空ファビコンを変更する (incl. library icons)">
+<!ENTITY Ctr_emptygfavicon	"'空ファビコンを変更する' does not work on &brandShortName; 55+">
 <!ENTITY Ctr_mstatusbar		"ステータスバーパネルを移動可能にする">
 <!ENTITY Ctr_mstatusbars4e	"ステータスバーパネルは Status-4-Evar で制御されます。">
 <!ENTITY Ctr_mstatusbartpp	"ステータスバーパネルは ThePuzzlePiece で制御されます。">
