--- a/xpi/locale/nl/options.dtd
+++ b/xpi/locale/nl/options.dtd
@@ -155,6 +155,7 @@
 <!ENTITY Ctr_altdlprogbar	"Downloadvoortgangsbalk: alternatieve vormgeving">
 <!ENTITY Ctr_altalertbox	"‘Waarschuwingsvenster’: alternatieve vormgeving">
 <!ENTITY Ctr_emptygfavico	"Algemeen favicon vervangen (incl. library icons)">
+<!ENTITY Ctr_emptygfavicon	"'Algemeen favicon vervangen' does not work on &brandShortName; 55+">
 <!ENTITY Ctr_mstatusbar		"Verplaatsbaar statuspaneel">
 <!ENTITY Ctr_mstatusbars4e	"Statusbalkpaneel wordt beheerd door ‘Status-4-Evar’">
 <!ENTITY Ctr_mstatusbartpp	"Statusbalkpaneel wordt beheerd door ‘ThePuzzlePiece’">
