--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -155,6 +155,7 @@
 <!ENTITY Ctr_altdlprogbar	"Barra de progresso de download: aparência alternativa">
 <!ENTITY Ctr_altalertbox	"'Caixa de alerta': aparência alternativa">
 <!ENTITY Ctr_emptygfavico	"Substituir favicon genérico (incl. library icons)">
+<!ENTITY Ctr_emptygfavicon	"'Substituir favicon genérico' does not work on &brandShortName; 55+">
 <!ENTITY Ctr_mstatusbar		"Painel da barra de status móvel">
 <!ENTITY Ctr_mstatusbars4e	"O painel da barra de status é controlado pelo 'Status-4-Evar'">
 <!ENTITY Ctr_mstatusbartpp	"O painel da barra de status é controlado pelo 'ThePuzzlePiece'">
