--- a/xpi/locale/zh-TW/options.dtd
+++ b/xpi/locale/zh-TW/options.dtd
@@ -155,6 +155,7 @@
 <!ENTITY Ctr_altdlprogbar	"「下載進度條」: 換個外觀">
 <!ENTITY Ctr_altalertbox	"「警示方塊」: 換個外觀">
 <!ENTITY Ctr_emptygfavico	"〈原網站未提供圖示時〉所使用的替代書籤圖示 (incl. library icons)">
+<!ENTITY Ctr_emptygfavicon	"'〈原網站未提供圖示時〉所使用的替代書籤圖示' does not work on &brandShortName; 55+">
 <!ENTITY Ctr_mstatusbar		"使狀態列可移動">
 <!ENTITY Ctr_mstatusbars4e	"狀態列由 Status-4-Evar 控制">
 <!ENTITY Ctr_mstatusbartpp	"狀態列由 The Puzzle Piece 控制">
