--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -155,6 +155,7 @@
 <!ENTITY Ctr_altdlprogbar	"下载进度条: 备选的外观">
 <!ENTITY Ctr_altalertbox	"“提示框”: 备选的外观">
 <!ENTITY Ctr_emptygfavico	"替换通用网站图标 (incl. library icons)">
+<!ENTITY Ctr_emptygfavicon	"'替换通用网站图标' does not work on &brandShortName; 55+">
 <!ENTITY Ctr_mstatusbar		"使状态栏面板可以移动">
 <!ENTITY Ctr_mstatusbars4e	"状态栏面板由“Status-4-Evar”所控制">
 <!ENTITY Ctr_mstatusbartpp	"状态栏面板由“ThePuzzlePiece”所控制">
