--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -371,6 +371,8 @@
 <!ENTITY Ctr_nonavtbborder	"Vrchní lišty: odstranit okraje lišt">
 <!ENTITY Ctr_toptb_oldpad	"Horní lišty: postaru místo nalevo a napravo">
 <!ENTITY Ctr_hidesbclose	"Postranní panely: skrýt zavírací tlačítka">
+<!ENTITY Ctr_hidesidebardm	"Postranní panely: hide dropmarker">
+<!ENTITY Ctr_comp_sbheader	"Postranní panely: compact header">
 <!ENTITY Ctr_notextshadow	"Lišty: zrušit stínování textu lišty a panelu">
 <!ENTITY Ctr_chevronfix		"Navigační lišta: skrýt dvojšipku ('Další nástroje') na konci lišty">
 <!ENTITY Ctr_tbsep_winc		"Horní lišta: oddělovače na liště">
