--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -371,6 +371,8 @@
 <!ENTITY Ctr_nonavtbborder	"Øverste værktøjslinjer: fjern kanten på værktøjslinje">
 <!ENTITY Ctr_toptb_oldpad	"Øverste værktøjslinjer: gammel venstre- og højre margen">
 <!ENTITY Ctr_hidesbclose	"Sidepaneler: skjul luk-knap">
+<!ENTITY Ctr_hidesidebardm	"Sidepaneler: hide dropmarker">
+<!ENTITY Ctr_comp_sbheader	"Sidepaneler: compact header">
 <!ENTITY Ctr_notextshadow	"Værktøjslinjer: skjul skygge for tekst på værktøjslinje og faneblade">
 <!ENTITY Ctr_chevronfix		"Navigationslinje: skjul dobbelt-pil på værktøjslinjernes slutning">
 <!ENTITY Ctr_tbsep_winc		"Øverste værktøjslinjer: yderligere separatorer for værktøjslinje">
