--- a/xpi/locale/dsb/options.dtd
+++ b/xpi/locale/dsb/options.dtd
@@ -371,6 +371,8 @@
 <!ENTITY Ctr_nonavtbborder	"Górne symbolowe rědki: Ramiki symboloweje rědki wótpóraś">
 <!ENTITY Ctr_toptb_oldpad	"Górne symbolowe rědki: stary lěwy a pšawy wótstawk wótnowiś">
 <!ENTITY Ctr_hidesbclose	"Bocnice: Tłocašk 'Zacyniś' schowaś">
+<!ENTITY Ctr_hidesidebardm	"Bocnice: hide dropmarker">
+<!ENTITY Ctr_comp_sbheader	"Bocnice: compact header">
 <!ENTITY Ctr_notextshadow	"Symbolowe rědki: Seń za tekst symboloweje rědki a rejtarki schowaś">
 <!ENTITY Ctr_chevronfix		"Nawigaciska rědka: Dwójnu šypku ('Dalšne rědy') na kóńcu rědki schowaś">
 <!ENTITY Ctr_tbsep_winc		"Górjejcne symbolowe rědki: Pśidatne źěleńske linije">
