--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -371,6 +371,8 @@
 <!ENTITY Ctr_nonavtbborder	"Εργαλειοθήκες κορυφής: Απομάκρυνση περιγραμμάτων εργαλειοθήκης">
 <!ENTITY Ctr_toptb_oldpad	"Εργαλειοθήκες κορυφής: παλιό γέμισμα αριστερά και δεξιά">
 <!ENTITY Ctr_hidesbclose	"Πλευρικές στήλες: απόκρυψη κουμπιού κλεισίματος πλευρικής στήλης">
+<!ENTITY Ctr_hidesidebardm	"Πλευρικές στήλες: hide dropmarker">
+<!ENTITY Ctr_comp_sbheader	"Πλευρικές στήλες: compact header">
 <!ENTITY Ctr_notextshadow	"Εργαλειοθήκες: απόκρυψη σκιάς κειμένου εργαλειοθηκών και καρτελών">
 <!ENTITY Ctr_chevronfix		"Εργαλειοθήκη πλοήγησης: απόκρυψη διπλού βέλους («Περισσότερα εργαλεία…») στο τέλος της εργαλειοθήκης">
 <!ENTITY Ctr_tbsep_winc		"Εργαλειοθήκες κορυφής: επιπρόσθετα διαχωριστικά εργαλειοθηκών">
