--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -371,6 +371,8 @@
 <!ENTITY Ctr_nonavtbborder	"Barras superiores: Eliminar bordes de barra de herramientas">
 <!ENTITY Ctr_toptb_oldpad	"Barras superiores: Antiguos ahuecados a izquierda y derecha">
 <!ENTITY Ctr_hidesbclose	"Ocultar botón cerrar de las barras laterales">
+<!ENTITY Ctr_hidesidebardm	"Sidebars: hide dropmarker">
+<!ENTITY Ctr_comp_sbheader	"Sidebars: compact header">
 <!ENTITY Ctr_notextshadow	"Ocultar sombreado para texto de barra de herramientas y texto de pestaña">
 <!ENTITY Ctr_chevronfix		"Barra de navegación: Ocultar botón de doble flecha ('Más herramientas') al final de las barras">
 <!ENTITY Ctr_tbsep_winc		"Barras superiores: Separadores extra de barra de herramientas">
