--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -371,6 +371,8 @@
 <!ENTITY Ctr_nonavtbborder	"Ülemised tööriistaribad: eemalda tööriistariba piirjooned">
 <!ENTITY Ctr_toptb_oldpad	"Ülemised tööriistaribad: vana vasak- ja parempoolse tühimiku suurus">
 <!ENTITY Ctr_hidesbclose	"Külgribad: peida sulgemise nupp">
+<!ENTITY Ctr_hidesidebardm	"Külgribad: hide dropmarker">
+<!ENTITY Ctr_comp_sbheader	"Külgribad: compact header">
 <!ENTITY Ctr_notextshadow	"Tööriistaribad: peida tööriistariba teksti ja kaardi teksti vari">
 <!ENTITY Ctr_chevronfix		"Asukohariba: peida topeltnool ('Rohkem tööriistu') tööriistariba lõpus">
 <!ENTITY Ctr_tbsep_winc		"Ülemised tööriistaribad: lisa-tööriistariba eraldajad">
