--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -371,6 +371,8 @@
 <!ENTITY Ctr_nonavtbborder	"Barres d'outils supérieures : enlever les bordures">
 <!ENTITY Ctr_toptb_oldpad	"Barres d'outils supérieures : utiliser les anciens espacements à gauche et à droite">
 <!ENTITY Ctr_hidesbclose	"Barres latérales : masquer le bouton de fermeture">
+<!ENTITY Ctr_hidesidebardm	"Barres latérales : hide dropmarker">
+<!ENTITY Ctr_comp_sbheader	"Barres latérales : compact header">
 <!ENTITY Ctr_notextshadow	"Masquer l'ombre du texte de barre d'outils ainsi que l'ombre du texte des onglets">
 <!ENTITY Ctr_chevronfix		"Barre de navigation : masquer le bouton « Plus d'outils »">
 <!ENTITY Ctr_tbsep_winc		"Barres d'outils supérieures : séparateurs de barre d'outil supplémentaires">
