--- a/xpi/locale/hsb/options.dtd
+++ b/xpi/locale/hsb/options.dtd
@@ -371,6 +371,8 @@
 <!ENTITY Ctr_nonavtbborder	"Hornje symbolowe lajsty: Ramiki symboloweje lajsty wotstronić">
 <!ENTITY Ctr_toptb_oldpad	"Hornje symbolowe lajsty: stary lěwy a prawy wotstawk wobnowić">
 <!ENTITY Ctr_hidesbclose	"Bóčnicy: Tłóčatko Začinić schować">
+<!ENTITY Ctr_hidesidebardm	"Bóčnicy: hide dropmarker">
+<!ENTITY Ctr_comp_sbheader	"Bóčnicy: compact header">
 <!ENTITY Ctr_notextshadow	"Symbolowe lajsty: Sćin za tekst symboloweje lajsty a rajtarki schować">
 <!ENTITY Ctr_chevronfix		"Nawigaciska lajsta: Dwójny šipk ('Dalše nastroje') na kóncu symboloweje lajsty schować">
 <!ENTITY Ctr_tbsep_winc		"Hornje symbolowe lajsty: Přidatne dźělenske linije">
