--- a/xpi/locale/ja/options.dtd
+++ b/xpi/locale/ja/options.dtd
@@ -371,6 +371,8 @@
 <!ENTITY Ctr_nonavtbborder	"枠線を取り除く">
 <!ENTITY Ctr_toptb_oldpad	"トップツールバー: 旧バージョンの左右の余白">
 <!ENTITY Ctr_hidesbclose	"サイドバー: 閉じるボタンを隠す">
+<!ENTITY Ctr_hidesidebardm	"サイドバー: hide dropmarker">
+<!ENTITY Ctr_comp_sbheader	"サイドバー: compact header">
 <!ENTITY Ctr_notextshadow	"ツールバーとタブのテキストの影を隠す">
 <!ENTITY Ctr_chevronfix		"ナビゲーションツールバー: ツールバーの後ろの“その他のツール”の矢印を消す">
 <!ENTITY Ctr_tbsep_winc		"ツールバー: 追加のツールバーセパレーター">
