--- a/xpi/locale/nl/options.dtd
+++ b/xpi/locale/nl/options.dtd
@@ -371,6 +371,8 @@
 <!ENTITY Ctr_nonavtbborder	"Bovenste werkbalken: werkbalkranden verwijderen">
 <!ENTITY Ctr_toptb_oldpad	"Bovenste werkbalken: oude opvulling links en rechts">
 <!ENTITY Ctr_hidesbclose	"Zijbalken: sluitknop verbergen">
+<!ENTITY Ctr_hidesidebardm	"Zijbalken: hide dropmarker">
+<!ENTITY Ctr_comp_sbheader	"Zijbalken: compact header">
 <!ENTITY Ctr_notextshadow	"Werkbalken: schaduw voor werkbalktekst en tabbladtekst verbergen">
 <!ENTITY Ctr_chevronfix		"Navigatiewerkbalk: dubbele pijl (‘Meer hulpmiddelen’) aan einde van werkbalk verbergen">
 <!ENTITY Ctr_tbsep_winc		"Bovenste werkbalken: extra werkbalkscheidingstekens">
