--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -371,6 +371,8 @@
 <!ENTITY Ctr_nonavtbborder	"Barras superiores: remover bordas da barra">
 <!ENTITY Ctr_toptb_oldpad	"Barras de ferramentas superiores: antigo preenchimento esquerdo e direito">
 <!ENTITY Ctr_hidesbclose	"Barras laterais: ocultar o botão fechar da barra lateral">
+<!ENTITY Ctr_hidesidebardm	"Barras laterais: hide dropmarker">
+<!ENTITY Ctr_comp_sbheader	"Barras laterais: compact header">
 <!ENTITY Ctr_notextshadow	"Barras de ferramentas: ocultar sombra para texto da barra e da aba">
 <!ENTITY Ctr_chevronfix		"Barra de ferramentas navegação: ocultar a seta dupla ('Mais ferramentas') no final das barras de ferramentas">
 <!ENTITY Ctr_tbsep_winc		"Barras de ferramentas superiores: separadores adicionais da barra">
