--- a/xpi/locale/ru/options.dtd
+++ b/xpi/locale/ru/options.dtd
@@ -371,6 +371,8 @@
 <!ENTITY Ctr_nonavtbborder	"Верхние панели: убрать границы панелей">
 <!ENTITY Ctr_toptb_oldpad	"Верхние панели: старые отступы справа и слева">
 <!ENTITY Ctr_hidesbclose	"Боковые панели: скрыть кнопку «Закрыть» на боковой панели">
+<!ENTITY Ctr_hidesidebardm	"Боковые панели: hide dropmarker">
+<!ENTITY Ctr_comp_sbheader	"Боковые панели: compact header">
 <!ENTITY Ctr_notextshadow	"Панели: скрыть тень от текста на панели инструментов и на вкладках">
 <!ENTITY Ctr_chevronfix		"Панель навигации: скрыть двойную стрелку («Другие инструменты…») в конце панели">
 <!ENTITY Ctr_tbsep_winc		"Верхние панели: дополнительные разделители панелей">
