--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -371,6 +371,8 @@
 <!ENTITY Ctr_nonavtbborder	"Orodne vrstice na vrhu: odstrani obrobe orodnih vrstic">
 <!ENTITY Ctr_toptb_oldpad	"Zgornje orodne vrstice: staro levo in desno blazinjenje">
 <!ENTITY Ctr_hidesbclose	"Stranske vrstice: skrij gumb Zapri stranske vrstice">
+<!ENTITY Ctr_hidesidebardm	"Stranske vrstice: hide dropmarker">
+<!ENTITY Ctr_comp_sbheader	"Stranske vrstice: compact header">
 <!ENTITY Ctr_notextshadow	"Orodne vrstice: skrij senco besedila orodnih vrstic in zavihkov">
 <!ENTITY Ctr_chevronfix		"Orodna vrstica za krmarjenje: skrij dvojno puščico ('Več orodij') na koncu orodne vrstice">
 <!ENTITY Ctr_tbsep_winc		"Zgornje orodne vrstice: dodatna ločila orodnih vrstic">
