--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -371,6 +371,8 @@
 <!ENTITY Ctr_nonavtbborder	"顶部工具栏: 移除工具栏边框">
 <!ENTITY Ctr_toptb_oldpad	"顶部工具栏: 旧式左右留白">
 <!ENTITY Ctr_hidesbclose	"侧边栏: 隐藏侧边栏关闭按钮">
+<!ENTITY Ctr_hidesidebardm	"侧边栏: hide dropmarker">
+<!ENTITY Ctr_comp_sbheader	"侧边栏: compact header">
 <!ENTITY Ctr_notextshadow	"工具栏: 隐藏工具栏文本与标签页文本的阴影">
 <!ENTITY Ctr_chevronfix		"导航工具栏: 隐藏工具栏尾部的双箭头 ('更多工具')">
 <!ENTITY Ctr_tbsep_winc		"顶部工具栏: 附加的工具栏分隔符">
