--- a/xpi/locale/zh-TW/options.dtd
+++ b/xpi/locale/zh-TW/options.dtd
@@ -371,6 +371,8 @@
 <!ENTITY Ctr_nonavtbborder	"頂部工具列: 移除工具列邊框">
 <!ENTITY Ctr_toptb_oldpad	"頂部工具列: 傳統左右邊框內間距">
 <!ENTITY Ctr_hidesbclose	"側邊欄: 隱藏側邊欄關閉按鈕">
+<!ENTITY Ctr_hidesidebardm	"側邊欄: hide dropmarker">
+<!ENTITY Ctr_comp_sbheader	"側邊欄: compact header">
 <!ENTITY Ctr_notextshadow	"工具列: 隱藏工具列和分頁的文字陰影">
 <!ENTITY Ctr_chevronfix		"瀏覽工具列: 隱藏工具列末端的雙右箭頭 (「更多工具...」按鈕)">
 <!ENTITY Ctr_tbsep_winc		"頂部工具列: 加上工具列分隔線">
