--- a/xpi/locale/uk/options.dtd
+++ b/xpi/locale/uk/options.dtd
@@ -371,6 +371,8 @@
 <!ENTITY Ctr_nonavtbborder	"Верхні панелі інструментів: прибрати межі панелі">
 <!ENTITY Ctr_toptb_oldpad	"Верхні панелі: старі лівий і правий відступи">
 <!ENTITY Ctr_hidesbclose	"Бокові панелі: приховати кнопку «Закрити» бокової панелі">
+<!ENTITY Ctr_hidesidebardm	"Бокові панелі: hide dropmarker">
+<!ENTITY Ctr_comp_sbheader	"Бокові панелі: compact header">
 <!ENTITY Ctr_notextshadow	"Панелі: приховати тінь тексту панелі та тексту вкладки">
 <!ENTITY Ctr_chevronfix		"Панель навігації: приховати подвійну стрілку («шеврон») в кінці панелі">
 <!ENTITY Ctr_tbsep_winc		"Верхні панелі: розділювачі додаткових панелей">
