--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -154,8 +154,8 @@
 <!ENTITY Ctr_oldtoplevimg	"Apparence classique des images, avec un arrière-plan blanc">
 <!ENTITY Ctr_altdlprogbar	"Barre de progression de téléchargement : apparence alternative">
 <!ENTITY Ctr_altalertbox	"Boites de notification : apparence alternative">
-<!ENTITY Ctr_emptygfavico	"Remplacer le Favicon générique (incl. library icons) :">
-<!ENTITY Ctr_emptygfavicon	"'Remplacer le Favicon générique' does not work on &brandShortName; 55+">
+<!ENTITY Ctr_emptygfavico	"Remplacer le Favicon générique des marque-pages et les icônes par défaut de la bibliothèque :">
+<!ENTITY Ctr_emptygfavicon	"« Remplacer le Favicon générique » ne fonctionne pas sur &brandShortName; 55+.">
 <!ENTITY Ctr_mstatusbar		"Rendre mobile le panneau de la barre d'état">
 <!ENTITY Ctr_mstatusbars4e	"Le panneau de la barre d'état est contrôlé par « Status-4-Evar ».">
 <!ENTITY Ctr_mstatusbartpp	"Le panneau de la barre d'état est contrôlé par « The Puzzle Piece ».">
@@ -371,8 +371,8 @@
 <!ENTITY Ctr_nonavtbborder	"Barres d'outils supérieures : enlever les bordures">
 <!ENTITY Ctr_toptb_oldpad	"Barres d'outils supérieures : utiliser les anciens espacements à gauche et à droite">
 <!ENTITY Ctr_hidesbclose	"Barres latérales : masquer le bouton de fermeture">
-<!ENTITY Ctr_hidesidebardm	"Barres latérales : hide dropmarker">
-<!ENTITY Ctr_comp_sbheader	"Barres latérales : compact header">
+<!ENTITY Ctr_hidesidebardm	"Barres latérales : masquer le bouton de liste déroulante">
+<!ENTITY Ctr_comp_sbheader	"Barres latérales : réduire la taille de l'en-tête">
 <!ENTITY Ctr_notextshadow	"Masquer l'ombre du texte de barre d'outils ainsi que l'ombre du texte des onglets">
 <!ENTITY Ctr_chevronfix		"Barre de navigation : masquer le bouton « Plus d'outils »">
 <!ENTITY Ctr_tbsep_winc		"Barres d'outils supérieures : séparateurs de barre d'outil supplémentaires">
@@ -445,7 +445,7 @@
 <!ENTITY Ctr_showfx57pcomp2				"Bleu - possible par défaut">
 <!ENTITY Ctr_showfx57pcomp3				"Jaune - possible avec des WebExtensions">
 <!ENTITY Ctr_showfx57pcomp4				"Orange - plus nécessaire">
-<!ENTITY Ctr_showfx57pcomp5				"Rouge - plus possible">
+<!ENTITY Ctr_showfx57pcomp5				"Rouge - éventuellement possible avec des scripts utilisateur JS">
 <!ENTITY Ctr_menu_restart.label			"Redémarrer">
 <!ENTITY Ctr_restartapp					"Afficher « Redémarrer » dans le menu « Fichier » et dans celui de l'ancien bouton &brandShortName;">
 <!ENTITY Ctr_restartapp2				"Afficher « Redémarrer » dans le panneau du bouton de menu">
