--- a/xpi/locale/ja/options.dtd
+++ b/xpi/locale/ja/options.dtd
@@ -154,8 +154,8 @@
 <!ENTITY Ctr_oldtoplevimg	"画像表示時の背景色を白に変更する">
 <!ENTITY Ctr_altdlprogbar	"ダウンロードのプログレスバーのデザインを変更する">
 <!ENTITY Ctr_altalertbox	"ダイアログ: デザインを変更する">
-<!ENTITY Ctr_emptygfavico	"空ファビコンを変更する (incl. library icons)">
-<!ENTITY Ctr_emptygfavicon	"'空ファビコンを変更する' does not work on &brandShortName; 55+">
+<!ENTITY Ctr_emptygfavico	"空ファビコンを変更する (ライブラリアイコンを含む)">
+<!ENTITY Ctr_emptygfavicon	"'空ファビコンを変更する'はFirefox 55以上では動作しません。">
 <!ENTITY Ctr_mstatusbar		"ステータスバーパネルを移動可能にする">
 <!ENTITY Ctr_mstatusbars4e	"ステータスバーパネルは Status-4-Evar で制御されます。">
 <!ENTITY Ctr_mstatusbartpp	"ステータスバーパネルは ThePuzzlePiece で制御されます。">
@@ -371,8 +371,8 @@
 <!ENTITY Ctr_nonavtbborder	"枠線を取り除く">
 <!ENTITY Ctr_toptb_oldpad	"トップツールバー: 旧バージョンの左右の余白">
 <!ENTITY Ctr_hidesbclose	"サイドバー: 閉じるボタンを隠す">
-<!ENTITY Ctr_hidesidebardm	"サイドバー: hide dropmarker">
-<!ENTITY Ctr_comp_sbheader	"サイドバー: compact header">
+<!ENTITY Ctr_hidesidebardm	"サイドバー: ドロップマーカーを隠す">
+<!ENTITY Ctr_comp_sbheader	"サイドバー: コンパクトヘッダー">
 <!ENTITY Ctr_notextshadow	"ツールバーとタブのテキストの影を隠す">
 <!ENTITY Ctr_chevronfix		"ナビゲーションツールバー: ツールバーの後ろの“その他のツール”の矢印を消す">
 <!ENTITY Ctr_tbsep_winc		"ツールバー: 追加のツールバーセパレーター">
